--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <style type="text/css">
+      @import url('https://rsms.me/inter/inter-ui.css');
+      html { font-family: 'Inter UI', sans-serif; }
+      @supports (font-variation-settings: normal) {
+        html { font-family: 'Inter UI var alt', sans-serif; }
+      }
       body {
         margin: 0;
       }
